# 4dct-kv-synthesis

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  jobs.py  main.py  pipeline.py  schemas.py  settings.py
app/radiotherapy_pipeline/: __init__.py  deepdrr_runner.py  dicom_xml.py  dynagan_runner.py
app/static/: styles.css
app/templates/: index.html  job.html
requirements/: app.txt  deepdrr.txt  dynagan.txt
scripts/: run_local.sh
